<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">NaturalistHike</string>
    <string name="app_label">Naturalist Hike</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_plant_list">Plant List</string>
    <string name="title_checklist">Checklist</string>
    <string name="title_activity_carpool">Carpool</string>
    <string name="title_activity_setup">Setup</string>

    <!-- empty view -->
    <string name="empty_list_no_trip">No trip is available</string>
    <string name="empty_list_loading">Loading trips...</string>
    <string name="empty_list">Plant list is not available.</string>
    <string name="empty_list_no_network">Trip or plant  list is not available. The network is not available to fetch data.</string>
    <string name="empty_list_server_down">Trip and plant list is not available. The server is not returning data.</string>
    <string name="empty_list_server_error">Plant list is not available. The server is not returning valid data. Please check for an updated version.</string>
    <string name="empty_list_server_invalid">The server is not returning valid data. Please check for an updated version.</string>

    <string name="credit_wildflower">content is copyrighted of http://www.wildflowersearch.org.</string>

    <string name="default_title">Naturalist Hike App</string>
    <string name="wakeup_time_dialog_title">Set trip day wakeup alarm</string>

    <!-- Date format [CHAR LIMIT=NONE] -->
    <string name="format_full_friendly_date"><xliff:g id="month">%1$s</xliff:g>, <xliff:g id="day">%2$s</xliff:g></string>
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>
    <!-- Notification Format ?? -->
    <string name="format_notification">Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g></string>
    <string name="notification_title">Hike Reminder</string>
    <string name="notification_text">View Your Naturalist Hike</string>

    <!-- fr checklist group header -->
    <string name="checklist_my">My</string>
    <string name="checklist_leader">Leader\'s</string>
    <string name="checklist_club">Club\'s</string>

    <string name="label_action">Perform Action</string>
    <string name="clock_alarm_name">Naturalist Hike</string>
    <string name="save_personal_info">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_ok">OK</string>
    <string name="email_hint">nature.lover@gmail.com</string>
    <string name="title_activity_webview">Web View</string>
    <string name="menu_start_hike">Start hike</string>

    <string name="home_location">"My home location"</string>
    <string name="meeting_location">"Trip meeting place"</string>
    <string name="user_selected_location">"My meeting place"</string>
    <string name="prompt_weather">Click to view weather details</string>
    <string name="meet_at">Meet at</string>
    <string name="trailhead_location">Trail Head</string>

    <string name="set_reminder_dialog_title">Change Trip Reminder Day</string>
    <string name="set_reminder_dialog_prompt">"Enter reminder days (must be greater than 0:</string>
    <string name="reminder_toast">"Invalid number."</string>
    <string name="alarm_toast">Only current trip can chage alarm time</string>
    <string name="setup_toast">Enter a valid preparation time value</string>
    <string name="meeting_place_options">meeting place options</string>
    <string name="meeting_time">meeting time</string>
    <string name="checklists">checklists</string>
    <string name="trip_name">trip name</string>
    <string name="cd_plant_list">plant list</string>
    <string name="cd_morning_prepation_time_on_hiking_day">morning prepation time on hiking day</string>
    <string name="cd_in_minutes">in minutes</string>
    <string name="cd_days_prior_trip_for_a_reminder">days prior trip for a reminder</string>
    <string name="cd_in_days">in days</string>
    <string name="tap_your_home_location_on_the_map">Tap your home location on the map</string>
    <string name="enter_reminder_days_default_i_day_earlier">Enter reminder days, default 1 day earlier</string>
    <string name="enter_preparation_time_default_45_min">Enter preparation time, default 45 min</string>
    <string name="minutes">minutes</string>
    <string name="days">days</string>
    <string name="google_map">google map</string>
    <string name="next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="cd_checklist_type">checklist type</string>
    <string name="cd_checklist_icon">checklist icon</string>
    <string name="cd_checklist_item">checklist item</string>
    <string name="cd_hike_icon">hike icon</string>
    <string name="cd_trip_miles">trip miles</string>
    <string name="miles">miles</string>
    <string name="trip_elevation">trip elevation</string>
    <string name="ft">ft</string>
    <string name="cd_hike_date">hike date</string>
    <string name="cd_plant_list_icon">plant list icon</string>
    <string name="plant_list">Plant List</string>
    <string name="cd_plant_list_of_leader">plant list of leader</string>
    <string name="cd_number_of_leader_list">number of leader list</string>
    <string name="cd_my_favority_plants">my favority plants</string>
    <string name="cd_number_of_my_favority_plants">number of my favority plants</string>
    <string name="cd_meeting_place_icon">meeting place icon</string>
    <string name="cd_meeting_time">meeting time</string>
    <string name="cd_meeting_place">meeting placee</string>
    <string name="cd_meet_place_data">meet_place_data</string>
    <string name="cd_checklist_icon2">checklist icon</string>
    <string name="cd_review">Review</string>
    <string name="cd_check_list">Check List</string>
    <string name="cd_reminder_icon">reminder icon</string>
    <string name="remind_me">Remind me</string>
    <string name="rcd_eminder_with_day">reminder with day</string>
    <string name="earlier">earlier</string>
    <string name="reminder_is_disabled">Reminder is disabled</string>
    <string name="cd_enable_or_disable_reminder">enable or disable reminder</string>
    <string name="cd_wake_me_up_at">Wake me up at</string>
    <string name="cd_alarm_time">alarm time</string>
    <string name="cd_time_to_meeting_place">time to meeting place</string>
    <string name="alarm_is_disabled">Alarm is disabled</string>
    <string name="cd_enable_and_disanle_alarm">enable and disanle alarm</string>
    <string name="cd_weather_icon">weather icon</string>
    <string name="cd_copy_rights">copy rights</string>
    <string name="your_email">Your Email</string>
    <string name="password">Password</string>
    <string name="confirm_pw">Confirm PW</string>
    <string name="cd_confirm_password">confirm password</string>
    <string name="cd_confirm_password_input">confirm password input</string>
    <string name="login">Login</string>
    <string name="plant_image">plant image</string>
    <string name="cd_observed">observed</string>
    <string name="i_ve_observed_the_plant">I\'ve observed the plant</string>
    <string name="common_name">common name</string>
    <string name="cd_scientific_name">scientific name</string>
    <string name="cd_family_name">family name</string>
    <string name="cd_favorite_icon">favorite icon</string>
    <string name="meeting_place_option">meeting place option</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="widget_trip_title">trip title</string>
    <string name="cd_on">On</string>
    <string name="widget_label">Next Naturalist Hike</string>
</resources>
