<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/gap_4dp"
    android:paddingRight="@dimen/gap_4dp"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".ui.MainFragment" >

    <RelativeLayout android:id="@+id/ll_hike_info"
                    style="@style/BaseRow" >
        <android.support.v7.widget.AppCompatImageView
            style="@style/MainIcon"
            android:id="@+id/icon_hiker"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/cd_hike_icon"
            android:src="@drawable/hiking"  />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:id="@+id/mileage_elevation"
            android:layout_toEndOf="@id/icon_hiker"
            android:layout_toRightOf="@id/icon_hiker"
            android:orientation="horizontal">
            <TextView style="@style/EmBodyText"
                      android:id="@+id/mileage"
                      android:contentDescription="@string/cd_trip_miles" />
            <TextView
                style="@style/SmallText"
                android:text="@string/miles"
                android:contentDescription="@string/miles"/>
            <View
                android:layout_width="@dimen/gap_8dp"
                android:layout_height="match_parent" />
            <TextView style="@style/EmBodyText"
                      android:id="@+id/elevation"
                      android:contentDescription="@string/trip_elevation" />
            <TextView style="@style/SmallText"
                      android:text="@string/ft"
                android:contentDescription="@string/ft"/>
        </LinearLayout>
        <TextView style="@style/EmSmallText"
                  android:id="@+id/hike_date"
                  android:layout_toEndOf="@id/icon_hiker"
                  android:layout_toRightOf="@id/icon_hiker"
                  android:layout_below="@+id/mileage_elevation"
                  android:contentDescription="@string/cd_hike_date" />
    </RelativeLayout>
    <View style="@style/MainDivider" />

    <LinearLayout  android:id="@+id/ll_plant_list"
                   xmlns:android="http://schemas.android.com/apk/res/android"
                   style="@style/MainRow" >
        <android.support.v7.widget.AppCompatImageView
            style="@style/MainIcon"
            android:contentDescription="@string/cd_plant_list_icon"
            android:src="@drawable/ic_plant_24dp"/>
        <TextView style="@style/EmBodyText"
                  android:contentDescription="@string/plant_list"
                  android:text="@string/plant_list"/>
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/icon_size"
            android:layout_weight="1"
            android:visibility="invisible"
            android:gravity="end|center_vertical">
            <android.support.v7.widget.AppCompatImageView
                style="@style/SmallIcon"
                android:src="@drawable/ic_leader_24dp"
                android:contentDescription="@string/cd_plant_list_of_leader"
                android:layout_gravity="end|center_vertical" />
            <TextView style="@style/SmallUpText"
                      android:id="@+id/num_leader_favor"
                      android:contentDescription="@string/cd_number_of_leader_list" />
        </FrameLayout>
        <FrameLayout
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginLeft="@dimen/gap_8dp"
            android:visibility="invisible"
            android:layout_marginStart="@dimen/gap_8dp" >
            <android.support.v7.widget.AppCompatImageView
                style="@style/SmallIcon"
                android:src="@drawable/ic_favorite_24dp"
                android:contentDescription="@string/cd_my_favority_plants"
                android:layout_gravity="center_vertical" />
            <TextView style="@style/SmallUpText"
                      android:id="@+id/num_my_favor"
                      android:contentDescription="@string/cd_number_of_my_favority_plants" />
        </FrameLayout>
    </LinearLayout>
    <View style="@style/MainDivider" />

    <RelativeLayout android:id="@+id/ll_carpool"
                    style="@style/BaseRow" >
        <android.support.v7.widget.AppCompatImageView
            style="@style/MainIcon"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:id="@+id/icon_carpooling"
            android:contentDescription="@string/cd_meeting_place_icon"
            android:src="@drawable/ic_carpooling_24dp"/>
        <TextView style="@style/SmallText"
                  android:layout_alignParentTop="true"
                  android:layout_toRightOf="@id/icon_carpooling"
                  android:layout_toEndOf="@id/icon_carpooling"
                  android:id="@+id/meet_at"
                  android:paddingTop="@dimen/gap_4dp"
                  android:contentDescription="@string/meet_at"
                  android:text="@string/meet_at"/>
        <TextView style="@style/EmBodyText"
                  android:layout_alignParentTop="true"
                  android:layout_toRightOf="@id/meet_at"
                  android:layout_toEndOf="@id/meet_at"
                  android:id="@+id/meeting_time"
                  android:contentDescription="@string/cd_meeting_time" />
        <TextView style="@style/EmSmallText"
                  android:layout_alignParentTop="true"
                  android:layout_toRightOf="@id/meeting_time"
                  android:layout_toEndOf="@id/meeting_time"
                  android:id="@+id/at_trail_head"
                  android:paddingTop="@dimen/gap_4dp"
                  android:contentDescription="@string/cd_meeting_place" />
        <TextView style="@style/EmSmallText"
                  android:layout_toRightOf="@id/icon_carpooling"
                  android:layout_toEndOf="@id/icon_carpooling"
                  android:layout_below="@+id/meet_at"
                  android:id="@+id/meeting_place"
                  android:contentDescription="@string/cd_meet_place_data" />
    </RelativeLayout>
    <View style="@style/MainDivider" />

    <LinearLayout android:id="@+id/ll_checklist"
                  style="@style/MainRow"   >

        <android.support.v7.widget.AppCompatImageView
            style="@style/MainIcon"
            android:rotation="-45"
            android:contentDescription="@string/cd_checklist_icon2"
            android:src="@drawable/ic_checklist_24dp"/>
        <TextView style="@style/BodyText"
                  android:contentDescription="@string/cd_review"
                  android:text="@string/cd_review"/>
        <TextView style="@style/EmBodyText"
                  android:contentDescription="@string/cd_check_list"
                  android:text="@string/cd_check_list" />
        <View style="@style/FillSpace" />
    </LinearLayout>
    <View style="@style/MainDivider" />
    <LinearLayout style="@style/MainRow" >
        <RelativeLayout android:id="@+id/ll_reminder"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:minHeight="@dimen/row_minheight" >
            <android.support.v7.widget.AppCompatImageView
                style="@style/MainIcon"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:id="@+id/icon_reminder"
                android:contentDescription="@string/cd_reminder_icon"
                android:src="@drawable/ic_reminder_24dp"/>
            <LinearLayout style="@style/MainRow"
                          android:id="@+id/reminder_inner"
                          android:layout_toRightOf="@+id/icon_reminder"
                          android:layout_toEndOf="@+id/icon_reminder"
                          android:orientation="horizontal">
                <TextView style="@style/BodyText"
                          android:contentDescription="@string/remind_me"
                          android:text="@string/remind_me"/>
                <TextView style="@style/EmBodyText"
                          android:contentDescription="@string/rcd_eminder_with_day"
                          android:id="@+id/reminder_time" />
                <TextView android:layout_width="0dp"
                          android:layout_weight="1"
                          android:layout_height="wrap_content"
                          style="@style/BodyTextNL"
                          android:contentDescription="@string/earlier"
                          android:text ="@string/earlier"/>
            </LinearLayout>
            <TextView
                android:layout_toRightOf="@+id/icon_reminder"
                android:layout_toEndOf="@+id/icon_reminder"
                android:layout_centerVertical="true"
                android:contentDescription="@string/reminder_is_disabled"
                android:text="@string/reminder_is_disabled"
                style="@style/BodyText"
                android:visibility="invisible"
                android:id="@+id/disable_reminder"/>
        </RelativeLayout>
        <android.support.v7.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:theme="@style/MySwitch"
            app:switchMinWidth="@dimen/switch_width"
            app:switchPadding="@dimen/gap_4dp"
            app:switchTextAppearance="?android:textAppearanceSmallInverse"
            android:thumb="@drawable/abc_switch_thumb_material"
            android:id="@+id/reminder_switch"
            android:checked="true"
            android:textOn="on"
            android:textOff="off"
            android:text=""
            android:textColor="@color/trans_grey"
            android:contentDescription="@string/cd_enable_or_disable_reminder"
            app:showText="false"/>
    </LinearLayout>
    <View style="@style/MainDivider" />

    <LinearLayout style="@style/MainRow"
                  android:id="@+id/ll_set_alarm">
        <android.support.v7.widget.AppCompatImageView
            style="@style/MainIcon"
            android:id="@+id/icon_alarm"
            android:src="@drawable/ic_alarm_24dp"/>
        <FrameLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <RelativeLayout android:id="@+id/ll_alarm_tvs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
                <TextView style="@style/BodyText"
                          android:id="@+id/tv_alarm"
                          android:layout_alignParentTop="true"
                          android:layout_alignParentLeft="true"
                          android:layout_alignParentStart="true"
                          android:contentDescription="@string/cd_wake_me_up_at"
                          android:text="@string/cd_wake_me_up_at"/>
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_toRightOf="@+id/tv_alarm"
                          android:layout_toEndOf="@+id/tv_alarm"
                          android:layout_alignParentTop="true"
                          style="@style/EmBodyTextNL"
                          android:id="@+id/alarm_time"
                          android:contentDescription="@string/cd_alarm_time" />
                <TextView android:id="@+id/driving_time"
                          style="@style/EmSmallText"
                          android:layout_below="@+id/tv_alarm"
                          android:layout_alignParentLeft="true"
                          android:layout_alignParentStart="true"
                          android:contentDescription="@string/cd_time_to_meeting_place" />
            </RelativeLayout>
            <TextView
                style="@style/BodyText"
                android:visibility="invisible"
                android:contentDescription="@string/alarm_is_disabled"
                android:text="@string/alarm_is_disabled"
                android:id="@+id/disable_alarm"/>
        </FrameLayout>
        <android.support.v7.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:theme="@style/MySwitch"
            app:switchMinWidth="@dimen/switch_width"
            app:switchPadding="@dimen/gap_4dp"
            app:switchTextAppearance="?android:textAppearanceSmallInverse"
            android:thumb="@drawable/abc_switch_thumb_material"
            android:id="@+id/alarm_switch"
            android:checked="true"
            android:textOn="on"
            android:textOff="off"
            android:text=""
            android:textColor="@color/trans_grey"
            android:contentDescription="@string/cd_enable_and_disanle_alarm"
            app:showText="false"/>
    </LinearLayout>
    <View style="@style/MainDivider" />

    <LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
                   style="@style/MainRow"
                   android:id="@+id/ll_weather_segment">

        <android.support.v7.widget.AppCompatImageView
            style="@style/MainIcon"
            android:id="@+id/weather_icon"
            android:contentDescription="@string/cd_weather_icon"
            android:src="@drawable/ic_weather_clear_24dp"/>
        <TextView style="@style/BodyText"
                  android:contentDescription="@string/prompt_weather"
                  android:text="@string/prompt_weather"/>
    </LinearLayout>
    <View style="@style/MainDivider"
          android:id="@+id/weather_divider" />
</LinearLayout>
