<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/gap_8dp"
    android:paddingLeft="@dimen/gap_8dp"
    android:paddingRight="@dimen/gap_8dp"
    android:paddingTop="@dimen/gap_8dp"
    android:orientation="vertical"
    tools:context=".ui.SetupPersonalInfoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/min_edit_height"
            android:textAppearance="?android:textAppearanceMedium"
            android:hint="@string/enter_preparation_time_default_45_min"
            android:inputType="number"
            android:nextFocusDown="@+id/et_remind_day"
            android:id="@+id/et_prep_time" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/gap_4dp"
            android:layout_marginStart="@dimen/gap_4dp"
            android:contentDescription="@string/cd_in_minutes"
            android:text="@string/minutes"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal">
        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/min_edit_height"
            android:textAppearance="?android:textAppearanceMedium"
            android:inputType="number"
            android:hint="@string/enter_reminder_days_default_i_day_earlier"
            android:nextFocusDown="@+id/save"
            android:id="@+id/et_remind_day" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/gap_4dp"
            android:layout_marginStart="@dimen/gap_4dp"
            android:contentDescription="@string/cd_in_days"
            android:text="@string/days"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/gap_8dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textAppearance="?android:textAppearanceMedium"
        android:text="@string/tap_your_home_location_on_the_map"
        android:contentDescription="@string/tap_your_home_location_on_the_map"
        android:textColor="@color/colorPrimaryText" />
    <fragment
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/map"
        android:contentDescription="@string/google_map"
        class="com.google.android.gms.maps.SupportMapFragment"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical|center_horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/bt_personal_ok"
            android:enabled="false"
            android:textAppearance="?android:textAppearanceMediumInverse"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/next"
            android:text="@string/next"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_marginLeft="@dimen/gap_8dp"
            android:layout_marginStart="@dimen/gap_8dp"
            android:textAppearance="?android:textAppearanceMediumInverse"
            android:id="@+id/bt_personal_cancel"
            android:contentDescription="@string/cancel"
            android:text="@string/cancel"/>
    </LinearLayout>
</LinearLayout>
