<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:elevation="2dp"
    app:cardCornerRadius="0dp">

<LinearLayout android:orientation="vertical"
              android:layout_width="match_parent"
              android:background="@color/pageColorLight"
              android:layout_height="wrap_content">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:id="@+id/plant_image"
            android:contentDescription="@string/plant_image"
            android:src="@drawable/not_available" />
        <android.support.v7.widget.AppCompatImageView
            android:layout_width="@dimen/icon_size"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:id="@+id/observed"
            android:layout_gravity="top|start"
            android:foreground="@color/trans_light"
            android:visibility="invisible"
            android:src="@drawable/ic_cl_me_24dp"
            android:contentDescription="@string/cd_observed"
            android:tint="@color/colorAccent2"/>
        <android.support.v7.widget.AppCompatImageView
            android:layout_width="@dimen/icon_size"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:id="@+id/observe"
            android:layout_gravity="top|start"
            android:foreground="@color/trans_light"
            android:contentDescription="@string/i_ve_observed_the_plant"
            android:src="@drawable/ic_observe_24dp" />
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:paddingTop="@dimen/gap_8dp"
        android:paddingRight="@dimen/gap_8dp"
        android:paddingLeft="@dimen/gap_8dp"
        android:orientation="vertical"  >
        <TextView
            android:id="@+id/plant_common_name"
            style="@style/EmSmallText"
            android:textColor="@color/colorPrimaryText"
            android:contentDescription="@string/common_name" />
        <TextView
            android:id="@+id/plant_scientific_name"
            style="@style/SmallText"
            android:textColor="@color/light_black"
            android:paddingBottom="@dimen/gap_4dp"
            android:contentDescription="@string/cd_scientific_name" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="top">
            <TextView android:textStyle="italic|bold"
                      android:layout_width="0dp"
                      android:layout_weight="1"
                      android:textSize="@dimen/small_text_size"
                      android:layout_height="wrap_content"
                      android:id="@+id/family_name"
                        android:contentDescription="@string/cd_family_name" />
            <android.support.v7.widget.AppCompatImageView
                style="@style/SmallIcon"
                android:id="@+id/is_favorite"
                android:src="@drawable/ic_favorite_24dp"
                android:contentDescription="@string/cd_favorite_icon"
                android:tint="@color/colorAccent" />
        </LinearLayout>
    </LinearLayout>
 </LinearLayout>
 </android.support.v7.widget.CardView>