<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="@dimen/widget_default_width"
              android:layout_height="@dimen/widget_default_height"
              android:background="@color/widgetBGColor"
              android:orientation="vertical"
              android:id="@+id/nh_widget"
                android:padding="@dimen/widget_margin">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/gap_8dp"
        android:layout_marginLeft="@dimen/gap_8dp"
        android:layout_marginRight="@dimen/gap_8dp"
        android:layout_marginBottom="@dimen/gap_4dp"
        android:gravity="center"
        android:background="@color/trans_grey"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/small_icon_size"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginStart="@dimen/gap_4dp"
            android:layout_marginLeft="@dimen/gap_4dp"
            android:text="@string/app_label"/>
    </LinearLayout>
    <TextView
        android:id="@+id/widget_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/body_text_size"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/gap_8dp"
        android:layout_marginBottom="@dimen/gap_4dp"
        android:text="Carkeek "
        android:textColor="@color/colorPrimaryText" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/small_text_size"
            android:contentDescription="@string/cd_on"
            android:text="@string/cd_on"
            android:textColor="@color/colorSecondaryText" />
        <TextView
            android:id="@+id/widget_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/body_text_size"
            android:layout_marginStart="@dimen/gap_4dp"
            android:layout_marginLeft="@dimen/gap_4dp"
            android:contentDescription="@string/widget_trip_title"
            android:textColor="@color/colorPrimary"
            android:text="September 25, 2016"      />
    </LinearLayout>

</LinearLayout>